--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-newapp",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3000",
   "dependencies": {
     "@tanstack/react-table": "^8.21.3",
     "@tanstack/table-core": "^8.21.3",
@@ -12,11 +13,14 @@
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
     "firebase": "^12.1.0",
+    "http-proxy-middleware": "^3.0.5",
     "jspdf": "^3.0.2",
     "lucide-react": "^0.539.0",
+    "node-fetch": "^2.7.0",
     "pdf-merger-js": "^5.1.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-export-table-to-excel": "^1.0.6",
     "react-feather": "^2.0.10",
     "react-router-dom": "^7.8.0",
     "react-scripts": "5.0.1",
